# wassette

./: CHANGELOG.md  README.md
.github/actions/daily-test-improver/coverage-steps/: action.yml
.github/workflows/: daily-test-improver.lock.yml  daily-test-improver.md  issue-triage.lock.yml  issue-triage.md  label issue.lock.yml  label issue.md  rust.yml  update-docs.lock.yml  update-docs.md  weekly-research.lock.yml  weekly-research.md
crates/mcp-server/src/: components.rs
crates/wassette/: Cargo.toml
crates/wassette/src/: component_storage.rs  config.rs  lib.rs  policy_internal.rs  runtime_context.rs  schema.rs
docs/: SUMMARY.md  agentic-workflows.md  cli.md  development.md  examples-catalog.md  examples.md  getting-started.md  installation.md  secrets.md  troubleshooting.md
examples/context7-rs/: Cargo.toml
examples/context7-rs/src/: lib.rs
examples/fetch-rs/: Cargo.toml
examples/fetch-rs/src/: lib.rs
tests/: cli_integration_test.rs
